# cookiecutter-fastapi-sun-asterisk

./: .gitignore  README.md  cookiecutter.json  setup.py
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .pylintrc  .python-version  CHANGELOG.md  LICENSE  Makefile  README.md  alembic.ini  develop.yml  main.py  production.yml  pyproject.toml  pytest.ini  setup.cfg  testing.yml
{{cookiecutter.project_slug}}/components/auth/: logics.py  repositories.py  routers.py  schemas.py
{{cookiecutter.project_slug}}/components/core/: models.py  repositories.py  schemas.py
{{cookiecutter.project_slug}}/components/healthy_check/: routers.py
{{cookiecutter.project_slug}}/components/products/: mappers.py  models.py
{{cookiecutter.project_slug}}/components/uploads/: logics.py  models.py  repositories.py  routers.py  schemas.py  tasks.py
{{cookiecutter.project_slug}}/components/users/: logics.py  models.py  repositories.py  routers.py  schemas.py  tasks.py
{{cookiecutter.project_slug}}/compose/: entrypoint
{{cookiecutter.project_slug}}/compose/postgres/: Dockerfile
{{cookiecutter.project_slug}}/config/: app.py  celery_app.py  conftest.py
{{cookiecutter.project_slug}}/docs/: alternatives_inspiration_comparisons.md  installation_within_docker.md  installation_without_docker.md  usage_development.md
{{cookiecutter.project_slug}}/framework/: api_response.py  cache.py  decorators.py  exceptions.py  hash.py  logger.py  pagination.py
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/utilities/: __init__.py  numberic.py  string.py
(+42 files in other folders)
